# OpenWcs

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  index.html  main.cpp  params.json
.github/workflows/: cmake.yml
terminal/: CMakeLists.txt  CameraHandler.cpp  CameraHandler.h  Config.h.in  ConfigHandler.cpp  ConfigHandler.h  DateTimeString.cpp  DateTimeString.h  MainApp.cpp  MainApp.h  MotionDetection.cpp  MotionDetection.h  Overlay.cpp  Overlay.h  Picture.cpp  Picture.h  README.md  ThreadVector.cpp  ThreadVector.h  Video.cpp  Video.h  camera.cpp  camera.h  generalFunctions.cpp  generalFunctions.h  mail.cpp  mail.h  main.cpp  timelapseCreator.cpp  timelapseCreator.h
terminal/timer/: Timelapse.cpp  Timelapse.h  timelapseCreator.cpp
terminal/webserver/: HTTPServerApplication.cpp  HTTPServerApplication.h  HandlerFactory.cpp  HandlerFactory.h  ResponseHandler.cpp  ResponseHandler.h  WSResponseHandler.cpp  WSResponseHandler.h
website/: about.php  filebrowser.php  index.html  index.php  live.html  live.php  login.php  login_false.html  login_false.php  loginstyle.css  logout.php  motiondetection.php  settings.html  settings.php  startpage.html  startpage.php  style.css  timelapse.html  timelapse.php  timelapsestyle.css
website/download/Pictures/: 0307T160405Z - 0307T160415Z.avi  0307T160457Z - 0307T160507Z.avi
website/style/: livestyle.css  loginstyle.css  motiondetectionstyle.css  style.css  timelapsestyle.css
website/style/icon/: browserconfig.xml
website/test/: header.php  picture.php  stylefail.css  test.php
